# simplesync

./: .gitignore  Cargo.toml  README.md  io.github.nico359.cloudsend.json  io.github.nico359.simplesync.json  meson.build
data/: io.github.nico359.cloudsend.desktop.in  io.github.nico359.cloudsend.gschema.xml  io.github.nico359.cloudsend.metainfo.xml.in  io.github.nico359.cloudsend.service.in  io.github.nico359.simplesync.desktop.in  io.github.nico359.simplesync.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: account_page.py  account_page.rs  account_page.ui  application.rs  cloudsend.gresource.xml  cloudsend.in  config.rs  db.py  db.rs  keyring.py  keyring.rs  main.py  main.rs  meson.build  pull.rs  push.py  push.rs  remote_browser_page.py  remote_browser_page.rs  remote_browser_page.ui  simplesync.gresource.xml  target_edit_page.py  target_edit_page.rs  target_edit_page.ui  targets_page.py  targets_page.rs  targets_page.ui  webdav.py  webdav.rs  window.py  window.rs  window.ui
